Bug 342276 - Two bars in notifications when move/copy files
Summary: Two bars in notifications when move/copy files
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-28 13:00 UTC by Gustavo Alvarez
Modified: 2015-01-23 22:34 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gustavo Alvarez 2014-12-28 13:00:40 UTC
when move/copy any file, spawn 2 progressbar in the notification, one with the actual job and other empty bar (but move fron the left to rigth and viceversa)

Reproducible: Always

Steps to Reproduce:
1. build all kf5/frameworks (include plasma5/next) from git
2. copy/move any file throug dolphin (frameworks) from device to other device
3. see the notification

Actual Results:  
two progressbar in the notiications. one "empty" and other according with the real job

Expected Results:  
one progressbar (?) with the real job

screenshot:  http://sl1pkn07.wtf/bleh37.png
Comment 1 Bhushan Shah 2014-12-28 13:04:55 UTC
I think this is generic bug in either KIO or dolphin.. as this seems to happen even with plasmashell not running. CCing dfaure
Comment 2 Kai Uwe Broulik 2014-12-30 10:49:20 UTC
Re-assigning to KIO since this happens even without plasma running (ie. you get two legacy copy dialogs too)
Comment 3 Martin Klapetek 2015-01-12 15:23:38 UTC
David, could you please share some insights on where to look in kio to fix this? I'd like to look into this.
Comment 4 David Faure 2015-01-22 08:11:31 UTC
I think this is due to the new DropJob, which doesn't set HideProgressInfo on itself nor on its KIO::copy subjob --> two progress infos.

Since the progress comes from the copyjob, I guess it should set HideProgressInfo on itself.

Ah but I thought this was taken care of by the fact that it doesn't call registerJob in DropJobPrivate::newJob (see the comment there).

Well, it's something to do with that. I guess the DropJob is getting progress info somehow, especially if this didn't happen before KF5.6.
Comment 5 Martin Klapetek 2015-01-22 16:21:47 UTC
Does DropJob get executed also on non-dnd operations? As this also happens when you just ctrl+c ctrl+v a file in Dolphin, no drag&drop involved.
Comment 6 Martin Klapetek 2015-01-23 13:58:05 UTC
Oh interesting, I've put a qdebug in the job tracker interface and this came up:

dolphin(8873) KJobTrackerInterface::registerJob: ---> Registering job KIO::PasteJob(0x1f365b0)
dolphin(8873) KJobTrackerInterface::registerJob: ---> Registering job KIO::CopyJob(0x1e6ee20)

So I guess it's the PasteJob not hiding the progress info. I'll have a look there.
Comment 7 Martin Klapetek 2015-01-23 22:34:22 UTC
Git commit 0314906ed66fb37dc7cd12974a18de58ee608ac2 by Martin Klapetek.
Committed on 23/01/2015 at 22:34.
Pushed by mklapetek into branch 'master'.

Don't show two progress dialogs for PasteJob

PasteJob creates a copy/move job and passes its flags to it. These jobs
then register with the progress dialog, so no need for the PasteJob to
register for progress tracking too.

CHANGELOG: Fix two progress bars/dialogs appearing for copy/move jobs
REVIEW: 122220
FIXED-IN: 5.7

M  +2    -3    src/widgets/pastejob_p.h

http://commits.kde.org/kio/0314906ed66fb37dc7cd12974a18de58ee608ac2