Don't show two progress dialogs for PasteJob

PasteJob creates a copy/move job and passes its flags to it. These jobs
then register with the progress dialog, so no need for the PasteJob to
register for progress tracking too.

CHANGELOG: Fix two progress bars/dialogs appearing for copy/move jobs
REVIEW: 122220
BUG: 342276
FIXED-IN: 5.7